syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.feelfree.plugchat.connections";
option java_outer_classname = "ConnectionsProto";
option objc_class_prefix = "CS";

package connections;

service ConnectionsService {
  rpc GetConnections (GetConnectionsRequest) returns (GetConnectionsResponse) {}
  rpc CreateConnection (CreateConnectionRequest) returns (ThreadConnection) {}
}

message CreateConnectionRequest {
  repeated Thread services = 1;
}

message GetConnectionsRequest {
}

message GetConnectionsResponse {
  repeated ThreadConnection connections = 1;
}

message Thread {
  string id = 1;
  string service = 2;
  string name = 3;
}

message ThreadConnection {
  repeated Thread services = 1;
}

message User {
  string id = 1;
  string avatar = 2;
  string username = 3;
}

message Message {
  string message = 1;
  repeated Attachement attachements = 2;
  User author = 3;
  Thread origin = 4;
  Thread target = 5;
}

message Attachement {
  string url = 1;
  string name = 2;
}
